--- a/viz_pass_rate_save.ipynb
+++ b/viz_pass_rate_save.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,8 @@
     "# simulation parameters \n",
     "chk_siz_list = [4, 8, 16, 32, 64]\n",
     "min_mat_list = [0, 1, 2, 4, 8, 16, 32, 64]\n",
-    "max_mis_list = [0, 1, 2, 4, 8, 16, 32, 64]\n",
+    "# max_mis_list = [0, 1, 2, 4, 8, 16, 32, 64]\n",
+    "max_mis_list = [0, 1]\n",
     "ncks = len(chk_siz_list)\n",
     "nm1s = len(min_mat_list)\n",
     "nm2s = len(max_mis_list)\n",
@@ -119,7 +120,8 @@
     "ambiguity_all = [.25]\n",
     "noise_all = [0, 0.01]\n",
     "n_retrievals_all = [1, 3]\n",
-    "mismatch_sensitivity_all = [0, 1.0]\n",
+    "# mismatch_sensitivity_all = [0, 1.0]\n",
+    "mismatch_sensitivity_all = [1.0]\n",
     "penalty_strenth_all = [0, 1]\n",
     "\n",
     "# temp_plt_path = os.path.join(plt_root, 'temp')\n",
