change def params

--- a/viz_retrieval_performance.ipynb
+++ b/viz_retrieval_performance.ipynb
@@ -100,7 +100,7 @@
     "# event parameters\n",
     "n_params = 64\n",
     "event_len = 512\n",
-    "n_branches = 3\n",
+    "# n_branches = 3\n",
     "event_len_trunc = 64 \n",
     "ms_deday = 0.0\n",
     "\n",
@@ -987,7 +987,7 @@
     "    ),\n",
     "    n_retrievals=widgets.ToggleButtons(\n",
     "        options=n_retrievals_all, \n",
-    "        value=n_retrievals_all[0], \n",
+    "        value=n_retrievals_all[-1], \n",
     "        description='n_retrievals', \n",
     "        disabled=False\n",
     "    ),\n",
