--- a/viz_retrieval_performance.ipynb
+++ b/viz_retrieval_performance.ipynb
@@ -4,24 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(5000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 5 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os \n",
@@ -29,61 +12,21 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "from ipywidgets import interact\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "%autosave 5"
+    "import ipywidgets as widgets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetch pre-computed results - Done!\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"gather the pre-computed results from figshare\"\"\"\n",
-    "\n",
-    "download_data = True\n",
-    "\n",
-    "if download_data:\n",
-    "    # download data \n",
-    "    img_dl_cmd = 'curl --header \"Host: s3-eu-west-1.amazonaws.com\" --header \"User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.77 Safari/537.36\" --header \"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8\" --header \"Accept-Language: en-US,en;q=0.9,zh-CN;q=0.8,zh;q=0.7,zh-TW;q=0.6,ja;q=0.5\" \"https://s3-eu-west-1.amazonaws.com/pfigshare-u-files/13474631/retrieval.tar.gz\" -o \"retrieval.tar.gz\" -L'\n",
-    "    _ = os.system(img_dl_cmd)\n",
-    "\n",
-    "    # create a cache dir \n",
-    "    if not os.path.exists('cache'):\n",
-    "        os.makedirs('cache')\n",
-    "\n",
-    "    # move the file to cache    \n",
-    "    if os.path.exists('retrieval.tar.gz'):    \n",
-    "        _ = os.system('mv retrieval.tar.gz cache/')\n",
-    "    else: \n",
-    "        assert os.path.exists('cache/retrieval.tar.gz')\n",
-    "\n",
-    "    # unzip the folder\n",
-    "    _ = os.system('tar -xzf cache/retrieval.tar.gz -C cache/')\n",
-    "\n",
-    "temp_plt_path = os.path.join('cache/retrieval')\n",
-    "assert os.path.exists(temp_plt_path), 'oops you need to fetch my data 1st...'    \n",
-    "print('Fetch pre-computed results - Done!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "constant\n",
     "\"\"\"\n",
+    "# plot path \n",
+    "temp_plt_path = os.path.join('cache/retrieval')\n",
+    "# all retrieval rules\n",
     "POSSIBLE_RULE_TYPES = ['null', 'demand', 'inhibit', 'demand+inhibit']\n",
     "# simulation parameters \n",
     "chk_siz_list = [4, 8, 16, 32, 64]\n",
